// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> flat story renders snapshot 1`] = `
<button
  class="button button--variant-flat button--size-small button--color-success"
  type="button"
>
  ​
  Flat Button
</button>
`;

exports[`<Button /> minimal story renders snapshot 1`] = `
<button
  class="button button--variant-minimal button--size-small button--color-alert"
  type="button"
>
  ​
  Minimal Button
</button>
`;

exports[`<Button /> outline story renders snapshot 1`] = `
<button
  class="button button--variant-outline button--size-small button--color-brand"
  type="button"
>
  ​
  Outline Button
</button>
`;
